--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <div id="mynetwork" ></div>
 
+    <!-- scripts -->
     <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
     <script src="vanilla-tilt.min.js"></script>
     <script src="script.js"></script>
